<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/college_image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Professor G. K. Singh\nPrincipal"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="18dp"
            android:text="@string/principal_desk"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding = "@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Green Enviornment"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding = "@dimen/text_margin"
            android:layout_marginTop="3dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Safe Enviornment"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp"
            android:padding = "@dimen/text_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="Quality Education"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Branch &amp; Courses"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:overScrollMode="never"
            android:clipToPadding="false"
            android:id="@+id/viewPager"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>