<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drawer_details.DeveloperActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="357dp"
                android:layout_height="144.68dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/developer_rectangle"
                android:elevation="4dp"
                app:cardBackgroundColor="#f5eee6">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/vansh"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_margin="5dp"
                    android:elevation="4dp" />

                <TextView
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/vansh_goyal"
                    android:textAppearance="@style/vansh_goyal" />

                <TextView
                    android:layout_width="93dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/co_founder_"
                    android:textAppearance="@style/co_founder_" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/department"
                    android:textAppearance="@style/department" />

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="145dp"
                    android:layout_marginTop="75dp"
                    android:text="@string/bca"
                    android:textAppearance="@style/bca"
                    android:textStyle="bold" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="185dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/graduated_i"
                    android:textAppearance="@style/graduated_i" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginLeft="245dp"
                    android:layout_marginTop="75dp"
                    android:alpha="0.4"
                    android:text="@string/some_id"
                    android:textAppearance="@style/some_id" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="357dp"
                android:layout_height="144.68dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="200dp"
                app:cardBackgroundColor="#f5eee6"
                android:background="@drawable/developer_rectangle"
                android:elevation="4dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/varsha"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_margin="5dp"
                    android:elevation="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:text="Varsha Rajput"
                    android:textAppearance="@style/vansh_goyal" />

                <TextView
                    android:layout_width="93dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="55dp"
                    android:text="Ui/Ux,\nDesigner"
                    android:textAppearance="@style/co_founder_" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/department"
                    android:textAppearance="@style/department" />

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="145dp"
                    android:layout_marginTop="75dp"
                    android:text="@string/bca"
                    android:textAppearance="@style/bca"
                    android:textStyle="bold" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="185dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/graduated_i"
                    android:textAppearance="@style/graduated_i" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginLeft="245dp"
                    android:layout_marginTop="75dp"
                    android:alpha="0.4"
                    android:text="@string/some_id"
                    android:textAppearance="@style/some_id" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="357dp"
                android:layout_height="144.68dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="370dp"
                app:cardBackgroundColor="#f5eee6"
                android:background="@drawable/developer_rectangle"
                android:elevation="4dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/prathibha"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_margin="5dp"
                    android:elevation="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:text="Pratibha Dhaiya"
                    android:textAppearance="@style/vansh_goyal" />

                <TextView
                    android:layout_width="93dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="55dp"
                    android:text="Content\nCreator"
                    android:textAppearance="@style/co_founder_" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/department"
                    android:textAppearance="@style/department" />

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="145dp"
                    android:layout_marginTop="75dp"
                    android:text="@string/bca"
                    android:textAppearance="@style/bca"
                    android:textStyle="bold" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="185dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/graduated_i"
                    android:textAppearance="@style/graduated_i" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginLeft="245dp"
                    android:layout_marginTop="75dp"
                    android:alpha="0.4"
                    android:text="@string/some_id"
                    android:textAppearance="@style/some_id" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="357dp"
                android:layout_height="144.68dp"
                android:layout_marginLeft="15dp"
                app:cardBackgroundColor="#f5eee6"
                android:layout_marginTop="540dp"
                android:background="@drawable/developer_rectangle"
                android:elevation="4dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/sachin"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_margin="5dp"
                    android:elevation="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:text="Sachin Sharma"
                    android:textAppearance="@style/vansh_goyal" />

                <TextView
                    android:layout_width="93dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="55dp"
                    android:text="Marketing\nHead"
                    android:textAppearance="@style/co_founder_" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/department"
                    android:textAppearance="@style/department" />

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="145dp"
                    android:layout_marginTop="75dp"
                    android:text="@string/bca"
                    android:textAppearance="@style/bca"
                    android:textStyle="bold" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="185dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/graduated_i"
                    android:textAppearance="@style/graduated_i" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginLeft="245dp"
                    android:layout_marginTop="75dp"
                    android:alpha="0.4"
                    android:text="@string/some_id"
                    android:textAppearance="@style/some_id" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView

                android:layout_width="357dp"
                android:layout_height="144.68dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="700dp"
                app:cardBackgroundColor="#f5eee6"
                android:background="@drawable/developer_rectangle"
                android:elevation="4dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/kush"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_margin="5dp"
                    android:elevation="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:text="Kush Bhardwaj"
                    android:textAppearance="@style/vansh_goyal" />

                <TextView
                    android:layout_width="93dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="55dp"
                    android:text="Ui/Ux,\nDesigner"
                    android:textAppearance="@style/co_founder_" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="82dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/department"
                    android:textAppearance="@style/department" />

                <TextView
                    android:layout_width="28dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="145dp"
                    android:layout_marginTop="75dp"
                    android:text="@string/bca"
                    android:textAppearance="@style/bca"
                    android:textStyle="bold" />

                <View
                    android:layout_width="71dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="185dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/developer_line"
                    android:rotation="90"
                    android:rotationX="8" />

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="16dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/graduated_i"
                    android:textAppearance="@style/graduated_i" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginLeft="245dp"
                    android:layout_marginTop="75dp"
                    android:alpha="0.4"
                    android:text="@string/some_id"
                    android:textAppearance="@style/some_id" />

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

    <!--<WebView-->
    <!--android:id="@+id/developer"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"/>-->


    <!--<ProgressBar-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--style="@style/Widget.AppCompat.ProgressBar"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:id="@+id/devProgress"/>-->
